# SDVRP_Logistics_Optimiser

./: .gitignore  LICENSE  README.md  context.md  optimization_roadmap.md  project_overview.md  pyproject.toml
data/: dark_stores_final.csv  master_df_v3.parquet  reverse_vrp_nodes.csv  vrp_nodes.csv
outputs/: all_zones_reverse_results.csv  baseline_kpis_naive.csv  forward_kpi_by_zone.csv  forward_kpi_summary.csv  forward_routes.csv  forward_routes.json  hybrid_kpi_summary.csv  hybrid_routes.json  reverse_kpi_summary.csv  reverse_routes.csv  reverse_routes.json  sdvrp_zone0_result.json  sdvrp_zone10_result.json  sdvrp_zone1_result.json  sdvrp_zone2_result.json  sdvrp_zone3_result.json  sdvrp_zone4_result.json  sdvrp_zone5_result.json  sdvrp_zone6_result.json  sdvrp_zone7_result.json  sdvrp_zone8_result.json  sdvrp_zone9_result.json
src/: forward_vrp.py  joint_optimizer.py  main_optimization.py  route_parser.py
