[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sdvrp-logistics-optimizer"
version = "0.1.0"
description = "Dark Store Placement + Integrated Logistics Optimisation"
authors = [
  { name="BM60132 Optimization Group" },
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Data
    "pandas>=2.0",
    "numpy>=1.26",
    "scipy>=1.11",
    "geopandas>=0.14",
    "pyarrow==23.0.1",
    
    # Machine Learning
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "prophet>=1.1",
    "shap>=0.43",
    
    # Optimisation
    "ortools>=9.8",
    "pulp>=2.7",
    
    # Visualisation
    "folium>=0.15",
    "plotly>=5.18",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    
    # Jupyter
    "jupyter>=1.1",
    "ipykernel>=7.0",
    
    # Reporting
    "python-docx>=1.1",
    "python-pptx>=0.6",
    "openpyxl>=3.1"
]
